force-app/main/default/objects/PSPhotoInspection__mdt/PSPhotoInspection__mdt.object-meta.xml
<CustomObject>
    <label>PSPhotoInspection</label>
    <pluralLabel>PSPhotoInspection</pluralLabel>
</CustomObject>