force-app/main/default/objects/PSPhotoInspection__mdt/fields/Camera_Message__c.field-meta.xml
<CustomField>
    <fullName>Camera_Message__c</fullName>
    <label>Camera Message</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>