force-app/main/default/objects/PSPhotoInspection__mdt/fields/Child_Fields__c.field-meta.xml
<CustomField>
    <fullName>Child_Fields__c</fullName>
    <label>Child Fields</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>