force-app/main/default/objects/PSPhotoInspection__mdt/fields/Child_Object__c.field-meta.xml
<CustomField>
    <fullName>Child_Object__c</fullName>
    <label>Child Object</label>
    <length>75</length>
    <required>true</required>
    <type>Text</type>
</CustomField>