force-app/main/default/objects/PSPhotoInspection__mdt/fields/Child_Parent_Field__c.field-meta.xml
<CustomField>
    <fullName>Child_Parent_Field__c</fullName>
    <label>Child Parent Field</label>
    <length>75</length>
    <required>true</required>
    <type>Text</type>
</CustomField>