force-app/main/default/objects/PSPhotoInspection__mdt/fields/Clear_Text__c.field-meta.xml
<CustomField>
    <fullName>Clear_Text__c</fullName>
    <label>Clear Button Text</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>