force-app/main/default/objects/PSPhotoInspection__mdt/fields/Image_Size__c.field-meta.xml
<CustomField>
    <fullName>Image_Size__c</fullName>
    <label>Image Size</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>