force-app/main/default/objects/PSPhotoInspection__mdt/fields/Latitude_Field__c.field-meta.xml
<CustomField>
    <fullName>Latitude_Field__c</fullName>
    <label>Latitude Field</label>
    <length>75</length>
    <type>Text</type>
</CustomField>