force-app/main/default/objects/PSPhotoInspection__mdt/fields/Longitude_Field__c.field-meta.xml
<CustomField>
    <fullName>Longitude_Field__c</fullName>
    <label>Longitude Field</label>
    <length>75</length>
    <type>Text</type>
</CustomField>