force-app/main/default/objects/PSPhotoInspection__mdt/fields/Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object__c</fullName>
    <label>Parent Object</label>
    <length>75</length>
    <required>true</required>
    <type>Text</type>
</CustomField>