force-app/main/default/objects/PSPhotoInspection__mdt/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <label>Profile</label>
    <length>75</length>
    <type>Text</type>
</CustomField>