force-app/main/default/objects/PSPhotoInspection__mdt/fields/Save_Text__c.field-meta.xml
<CustomField>
    <fullName>Save_Text__c</fullName>
    <label>Save Button Text</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>